src/objects/CC_Master_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>App_Dashboard_Page_Size__c</fullName>
        <inlineHelpText>Values from 3 to 10</inlineHelpText>
        <label>App Dashboard Records Per Page</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>App_Dashboard_Pages_Per_Screen__c</fullName>
        <inlineHelpText>Values from 3 to 10</inlineHelpText>
        <label>App Dashboard Pages Per Screen</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Customer_Support_Phone_Number__c</fullName>
        <label>Customer Support Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Comment_Pages_Per_Screen__c</fullName>
        <label>Comment Pages Per Screen</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment_Records_Per_Page__c</fullName>
        <label>Comment Records Per Page</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feed_Pages_Per_Screen__c</fullName>
        <label>Feed Pages Per Screen</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feed_Records_Per_Page__c</fullName>
        <label>Feed Records Per Page</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Dashboard_Page_Size__c</fullName>
        <inlineHelpText>Values ranging from 3 to 10</inlineHelpText>
        <label>Task Dashboard Records Per Page</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Dashboard_Pages_Per_Screen__c</fullName>
        <inlineHelpText>Values ranging from 3 to 10</inlineHelpText>
        <label>Task Dashboard Pages Per Screen</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WL_App_List_Page_Size__c</fullName>
        <label>Waitlisted Apps Records Per Page</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WL_App_List_Pages_Per_Screen__c</fullName>
        <label>Waitlisted Apps Pages Per Screen</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Master Settings</label>
</CustomObject>